2007-04-13  Michael Smith  <msmith@fluendo.com>

	* flumotion/component/producers/wms.py:
	  Fix up previous changes to authenticators to work again.

2007-04-12  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/component/encoders/wma/wma.py
	  (WMAEncoder.get_pipeline_string, WMAEncoder.configure_pipeline):
	* flumotion/component/encoders/wma/wma.xml:
	  Since we only want dropping to fix sync for A/V streams, make
	  this configurable.

2007-04-12  Michael Smith  <msmith@fluendo.com>

	* flumotion/component/producers/wms.py:
	* flumotion/component/producers/wms.xml:
	  Add 'secure' property. If set to false (defaults to true), then
	  don't check opaque/nonce for validity; this enables replay attacks
	  and makes the authentication approximately as secure as Basic auth.

2007-04-11  Michael Smith  <msmith@fluendo.com>

	* flumotion/component/producers/asfparse.py:
	* flumotion/component/producers/wms.py:
	  Handle a reconnect from the encoder after a network outage.

2007-04-11  Michael Smith  <msmith@fluendo.com>

	* flumotion/component/producers/asfparse.py:
	  Handle encoder disconnection more gracefully, so we can reconnect an
	  encoder later and have it work again.

2007-04-10  Michael Smith  <msmith@fluendo.com>

	* flumotion/component/producers/wms.py:
	  Clean up pychecker warnings.

2007-04-10  Michael Smith  <msmith@fluendo.com>

	* Makefile.am:
	* env:
	  Prod randomly so that distcheck passes

2007-04-10  Michael Smith  <msmith@fluendo.com>

	* flumotion/component/producers/asfparse.py:
	  Get rid of remaining TODO.
	  Now I just need to make it work reliably and/or on more than one
	  system!

2007-04-10  Michael Smith  <msmith@fluendo.com>

	* flumotion/component/producers/Makefile.am:
	* flumotion/component/producers/digest.py:
	* flumotion/component/producers/wms.py:
	* flumotion/component/producers/wms.xml:
	  Rewrite to factor authentication out into a helper class, and a
	  separate bouncer.
